# process-fork

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml
src/: add.hpp  main.cpp  message.hpp
src/controller/: main.cpp
src/logger/: main.cpp
src/messagebroker/: Broker.cpp  Broker.hpp  main.cpp
src/processor/: main.cpp
src/producer/: main.cpp
tests/: CMakeLists.txt  test_add.cpp
